<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings" />
    </group>

    <item android:title="Communication">
        <menu>
            <item
                android:id="@+id/nav_emergency"
                android:icon="@android:drawable/ic_dialog_alert"
                android:title="@string/emergency_contacts" />
            <item
                android:id="@+id/nav_notifications"
                android:icon="@android:drawable/ic_popup_reminder"
                android:title="@string/notifications" />
        </menu>
    </item>

</menu>
